--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gs-t3",
+  "name": "gs_t3",
   "version": "2.0.0",
   "description": "Some boilerplate code to get you started - get shakin'!",
   "main": "index.js",
