--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -53,8 +55,6 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "supertest": "^4.0.2",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "supertest": "^4.0.2"
   }
 }
