added Stripe API functionality

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
+    "stripe": "^8.202.0",
     "uuid": "^8.3.2",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
