--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.4.2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
