--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
+    "dateformat": "^5.0.2",
     "express": "^4.16.4",
     "formik": "^2.2.9",
     "history": "^4.9.0",
@@ -68,6 +69,7 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "url-loader": "^4.1.1"
   }
 }
