--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-awesome-slider": "^4.1.0",
     "react-paginate": "^8.1.0",
     "react-toastify": "^8.2.0",
     "sequelize": "^6.3.5",
@@ -57,7 +58,9 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "esm": "^3.2.25",
+    "file-loader": "^6.2.0",
     "mocha": "^6.2.3",
+    "node-sass": "^7.0.1",
     "nodemon": "^1.19.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -69,6 +72,8 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "supertest": "^4.0.2",
     "url-loader": "^4.1.1"
   }
