--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
+    "react-alice-carousel": "^2.5.1",
     "react-awesome-slider": "^4.1.0",
+    "react-multi-carousel": "^2.8.0",
     "react-paginate": "^8.1.0",
     "react-toastify": "^8.2.0",
     "sequelize": "^6.3.5",
     "stripe": "^8.202.0",
+    "swiper": "^8.0.6",
     "uuid": "^8.3.2",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
@@ -66,6 +69,9 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
+    "react-scroll-to-top": "^1.0.8",
+    "react-slidy": "^4.3.3",
+    "react-svg-loader": "^3.0.3",
     "react-test-renderer": "^16.4.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
