--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/material": "^5.4.2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
