--- a/package.json
+++ b/package.json
@@ -23,22 +23,28 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.4.2",
+    "@mui/x-data-grid": "^5.5.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.2",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "dateformat": "^5.0.2",
+    "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "formik": "^2.2.9",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.7.2",
     "pg": "^8.5.1",
     "react-awesome-slider": "^4.1.0",
     "react-paginate": "^8.1.0",
     "react-toastify": "^8.2.0",
+    "recharts": "^2.1.9",
     "sequelize": "^6.3.5",
     "stripe": "^8.202.0",
     "uuid": "^8.3.2",
