admin page revamp

--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "pg": "^8.5.1",
     "react-alice-carousel": "^2.5.1",
     "react-awesome-slider": "^4.1.0",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-multi-carousel": "^2.8.0",
     "react-paginate": "^8.1.0",
     "react-toastify": "^8.2.0",
-    "recharts": "^2.1.9",
     "sequelize": "^6.3.5",
     "stripe": "^8.202.0",
     "swiper": "^8.0.6",
