--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "gs_t3",
   "version": "2.0.0",
+  "engines": {
+    "node": "14.17.6"
+  },
   "description": "Some boilerplate code to get you started - get shakin'!",
   "main": "index.js",
   "scripts": {
@@ -29,6 +32,7 @@
     "@mui/material": "^5.4.2",
     "@mui/x-data-grid": "^5.5.1",
     "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.20.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.2",
     "compression": "^1.7.3",
@@ -60,8 +64,6 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
-    "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.16.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
     "css-loader": "^6.6.0",
